Resolve "Remove minor sonar issues"